Bug 256373 - Regression: Tellico 2.3.1 doesn't save and reload window settings
Summary: Regression: Tellico 2.3.1 doesn't save and reload window settings
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.1
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
: 256447 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-08 15:51 UTC by Robby Stephenson
Modified: 2010-11-11 06:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2010-11-08 15:51:37 UTC
Version:           2.3.1 (using KDE 4.5.2) 
OS:                Linux

Having packaged tellico 2.3.1 for Mandriva, it seem sto me that there is
a regression: When I sort my CD collection, tellico doesn't remind it,
each time I closed tellico and relaunch it, it's back to default (just
title), and also each time I add a CD in it, it's again back to default.

Reproducible: Didn't try
Comment 1 Robby Stephenson 2010-11-09 17:02:04 UTC
*** Bug 256447 has been marked as a duplicate of this bug. ***
Comment 2 Robby Stephenson 2010-11-11 06:03:01 UTC
SVN commit 1195446 by rstephenson:

Fix bug with list view settings not being retained between sessions.

BUG:256373


 M  +4 -0      ChangeLog  
 M  +5 -0      src/detailedlistview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1195446