Fix bug with list view settings not being retained between sessions.

BUG:256373

svn path=/trunk/extragear/office/tellico/; revision=1195446